Small but necessary adjustment in the css to enforce the maximum width of the cube selector in order to avoid misalignment due to differences in cube names' widths

--- a/cubetube/static/css/base.css
+++ b/cubetube/static/css/base.css
@@ -637,7 +637,7 @@ button {
       background: rgba(255, 255, 255, 0.2); }
 
 #cubeName {
-	max-width: 165px; 
+	max-width: 145px; 
 	margin-top: -2px;
 }
 
